# pyvectora

./: .gitignore  Cargo.toml  GETTING_STARTED.md  NOTICE  README.md  ROADMAP.md  ruff.toml  rustfmt.toml
.github/workflows/: ci.yml
python-framework/: README.md  pyproject.toml
python-framework/pyvectora/: __init__.py  app.py  auth.py  cli.py  contract.py  controller.py  database.py  dependency.py  di.py  guard.py  repository.py  request.py  response.py  routing.py  schema.py  test_client.py
rust-core/pyvectora-bindings/: Cargo.toml
rust-core/pyvectora-bindings/src/: context.rs  database.rs  error.rs  lib.rs
rust-core/pyvectora-core/: Cargo.toml
rust-core/pyvectora-core/src/: database.rs  error.rs  json.rs  lib.rs  middleware.rs  request.rs  route.rs  router.rs  server.rs  state.rs  types.rs  validation.rs
rust-core/pyvectora-macros/: Cargo.toml
rust-core/pyvectora-macros/src/: lib.rs
tests/: test_pure_python.py
