[workspace]
resolver = "2"
members = [
    "rust-core/pyvectora-core",
    "rust-core/pyvectora-bindings",
    "rust-core/pyvectora-macros",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["maliksari"]
license = "Apache-2.0"
repository = "https://github.com/pyvectora/pyvectora"
rust-version = "1.70"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP stack
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Router
matchit = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = "0.14"
jsonwebtoken = "9"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime", "attributes"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Database
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "tls-native-tls"] }

# Pin home to avoid edition2024 issue
home = "0.5.9"

# Internal crates
pyvectora-core = { path = "rust-core/pyvectora-core" }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
# Allow common patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
