[package]
name = "pyvectora-core"
description = "Core runtime library for PyVectora - HTTP server, routing, async bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
matchit.workspace = true
serde.workspace = true
serde_json.workspace = true
simd-json.workspace = true
jsonwebtoken.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
pyo3 = { version = "0.20", features = ["extension-module"] }

[dev-dependencies]
tokio-test = "0.4"

[lints]
workspace = true
